TAG: qcreports_db-5-1-0-4
DATE: 11/13/2012
STAFF: lec
CHANGES:
mgd/GXD_ImageCheck.sql;update print statement

TAG: qcreports_db-5-1-0-3
DATE: 10/04/2012
STAFF: lec
CHANGES:
ALL_CellLineProvdideer.sql/bug fix

TAG: qcreports_db-5-1-0-2
DATE: 09/25/2012
STAFF: lec
CHANGES:
TR1184/PRB_StrainByDate.py

TAG: qcreports_db-5-1-0-1
DATE: 09/17/2012
STAFF: lec
CHANGES:
TR11173/changed J:171498/"J Am Soc Nephrol" to "GUDMAP"

TAG: qcreports_db-5-0-0-23
DATE: 8/14/2012
STAFF: sc
CHANGES: TR11143/ missing > at end of item 15 in alleles section

TAG: qcreports_db-5-0-0-22
TAG: qcreports_db-5-0-0-21
DATE: 08/07/2012
STAFF: lec
CHANGES: 
1) TR11107/GXD_FullCodeableIndexed.py; added

TAG: qcreports_db-5-0-0-20
DATE: 08/01/2012
STAFF: lec
CHANGES: 
1) TR11117/GXD_ImagePanes.py; updated the name

TAG: qcreports_db-5-0-0-19
DATE: 07/12/2012
STAFF: lec
CHANGES: 
1) TR11120/GO_done_newlit.py; remove

TAG: qcreports_db-5-0-0-18
TAG: qcreports_db-5-0-0-17
DATE: 07/10/2012
STAFF: lec
CHANGES: 
1) TR11117/GXD_ImagePanes.py; move from monthly to daily (mgd directory)

TAG: qcreports_db-5-0-0-16
DATE: 06/19/2012
STAFF: lec
CHANGES: 
1) TR11035/postgres cleanup/GXD_Stats.py

TAG: qcreports_db-5-0-0-15
DATE: 06/19/2012
STAFF: lec
CHANGES: 
1) T11110
mgd/PRB_StrainByDate.sql
mgd/MLP_Nomenclature.sql

TAG: qcreports_db-5-0-0-14
DATE: 06/18/2012
STAFF: lec
CHANGES: 
1) PRB_StrainPrivate.py

TAG: qcreports_db-5-0-0-13
DATE: 06/11/2012
STAFF: lec
CHANGES: 
1) GXD_FullCodeable.py (GXD_FullCodable3)
2) GXD_OneGenePapers.py
3) GXD_EarlyEmbPapers.py
4) GXD_FullCode.py (GXD_DevBiolandDevelopment, GXD_DevDyn)

TAG: qcreports_db-5-0-0-12
DATE: 06/05/2012
STAFF: lec
CHANGES: 
1) GXD_Stats.py; fix bug

TAG: qcreports_db-5-0-0-11
DATE: 05/24/2012
STAFF: lec
CHANGES: 
1) GXD_SpecTheiler.sql fix (from postgres cleanup)

TAG: qcreports_db-5-0-0-10
DATE: 05/22/2012
STAFF: lec
CHANGES: 
1) RECOMB_SpecTheiler.sql; fix bug

TAG: qcreports_db-5-0-0-9
DATE: 05/21/2012
STAFF: lec
CHANGES: 